corrected spelling of "Coffee"

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="profile">
     <img class="mel"src="images/angela.png" alt="mel-img">
     <h2>Hello.</h2>
-    <p class="intro">I'm a beginner programmmer. I love 2 things, coffe and cats.</p>
+    <p class="intro">I'm a beginner programmmer. I love 2 things, coffee and cats.</p>
   </div>
   <hr>
   <div class="skills">
